viewTokenPage in balance, text-overflow fixs

--- a/mobile-app-front-end/app/src/app/pages/balance/view-tokens/view-tokens.page.scss
+++ b/mobile-app-front-end/app/src/app/pages/balance/view-tokens/view-tokens.page.scss
@@ -56,7 +56,7 @@ ion-list ion-item {
 }
 .title {
     font-family: manrope-semibold;
-    font-size: 16px;
+    font-size: 1.0rem;
     float: left;
     text-overflow: ellipsis;
     max-width: inherit;
@@ -68,16 +68,18 @@ ion-list ion-item {
     font-family: manrope-semibold;
 }
 .value {
+    p {
+        max-width: 100%;
+    }
     -webkit-user-select: text;  /* Chrome all / Safari all */
     -moz-user-select: text;     /* Firefox all */
     -ms-user-select: text;
     user-select: text;
     color: var(--ion-color-tertiary);
     opacity: 0.7;
-    font-size: 16px;
+    font-size: 1.0rem;
     font-family: manrope-regular;
     text-align: right;
-    float: right;
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: inherit;
